--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,11 +1053,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [city_indices,city_name] \n",
+    "names_and_ranks = [city_indices,city_names] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
