--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
-    "for index in list(range(0, len(names_))):\n",
+    "for index in list(range(0, len(names_and_ranks))):\n",
     "    print(cities[index]+\",\", countries[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
