--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
-    "\n",
+    "for \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
