--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
     "for index in names_and_ranks:\n",
-    "    print(city_indices[index]+\".\",city_names_[index])\n",
+    "    print(city_indices+\".\",city_names_[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
