--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
    ],
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
-    "for index in list(range(0, len(countries)))names_and_ranks:\n",
+    "for index in list(range(0, len(names_and_ranks))):\n",
     "    print(f'{city_indices}. {city_names}')\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
