--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,22 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]. ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]. ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\".\". ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\".\". ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
     "for index in list(range(0, len(names_and_ranks))):\n",
-    "    print(f'{city_indices}. {city_names}')\n",
+    "    print(f'{city_indices}\".\". {city_names}')\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
