Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,21 +1053,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Buenos Aires\n",
-      "1 Toronto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
-    "for index in list(range(0, len(names_and_ranks))):\n",
+    "for index in list(range(, len(names_and_ranks))):\n",
     "    print(city_indices[index], city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
