Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = [city_indices,city_names] \n",
     "for index in list(range(0, len(names_and_ranks))):\n",
-    "    print(f'{city}! This is {program}')\n",
+    "    print(f'{city_indices}.{city_}')\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
