--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,7 +1069,7 @@
    "source": [
     "names_and_ranks = [city_indices,\".\",city_names] \n",
     "for index in list(range(0, len(names_and_ranks))):\n",
-    "    print(f'{city_indices[1]}.{city_names[0]}')\n",
+    "    print(f'{names}')\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
