--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,23 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], '.', ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']]\n",
-      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], '.', ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']]\n",
-      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], '.', ['Buenos Aires', 'Toronto', 'Marakesh', 'Albuquerque', 'Los Cabos', 'Greenville', 'Archipelago Sea', 'Pyeongchang', 'Walla Walla Valley', 'Salina Island', 'Solta', 'Iguazu Falls']]\n"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-37-b7a19f53d001>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-b7a19f53d001>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    # write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [city_indices,\".\",city_names] \n",
     "for index in list(range(0, len(names_and_ranks))):\n",
-    "    print(f'{names_and_ranks}')\n",
+    "    \n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
