Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,22 +1053,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-37-b7a19f53d001>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-b7a19f53d001>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    # write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1Buenos Aires\n",
+      "1Buenos Aires\n",
+      "1Buenos Aires\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [city_indices,\".\",city_names] \n",
     "for index in list(range(0, len(names_and_ranks))):\n",
-    "    print(f'{city_indices[1]}{city}')\n",
+    "    print(f'{city_indices[1]}{city_names[0]}')\n",
     "    \n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
