--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,23 +1053,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1Buenos Aires\n",
-      "1Buenos Aires\n",
-      "1Buenos Aires\n"
+      "1. Buenos Aires\n",
+      "1. Buenos Aires\n",
+      "1. Buenos Aires\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [city_indices,\".\",city_names] \n",
     "for index in list(range(0, len(names_and_ranks))):\n",
-    "    print(f'{city_indices[1]}{city_names[0]}')\n",
+    "    print(f'{city_indices[1]}. {city_names[0]}')\n",
     "    \n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
@@ -1077,9 +1077,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires',\n",
+       " 'Toronto',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Los Cabos',\n",
+       " 'Greenville',\n",
+       " 'Archipelago Sea',\n",
+       " 'Pyeongchang',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Salina Island',\n",
+       " 'Solta',\n",
+       " 'Iguazu Falls']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
