--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
    ],
    "source": [
     "names_and_ranks = [city_indices,\".\",city_names] \n",
-    "for index in list(range(0, len(names_and_ranks))):\n",
+    "for index in names_and_ranks:\n",
     "    print(f'{city_indices[1]}. {city_names[0]}')\n",
     "    \n",
     "    \n",
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        " 'Iguazu Falls']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
