--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = [city_indices,\".\",city_names] \n",
+    "names_and_ranks = [] \n",
     "for index in names_and_ranks:\n",
     "    print(f'{city_indices[1]}. {city_names[0]}')\n",
     "    \n",
