--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,24 +1053,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Buenos Aires\n",
-      "1. Buenos Aires\n",
-      "1. Buenos Aires\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],\n",
+       " '.',\n",
+       " ['Buenos Aires',\n",
+       "  'Toronto',\n",
+       "  'Marakesh',\n",
+       "  'Albuquerque',\n",
+       "  'Los Cabos',\n",
+       "  'Greenville',\n",
+       "  'Archipelago Sea',\n",
+       "  'Pyeongchang',\n",
+       "  'Walla Walla Valley',\n",
+       "  'Salina Island',\n",
+       "  'Solta',\n",
+       "  'Iguazu Falls'],\n",
+       " '1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Marakesh',\n",
+       " '4. Albuquerque',\n",
+       " '5. Los Cabos',\n",
+       " '6. Greenville',\n",
+       " '7. Archipelago Sea',\n",
+       " '8. Pyeongchang',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks = [] \n",
-    "for index in names_and_ranks:\n",
-    "    print(f'{city_indices[1]}. {city_names[0]}')\n",
+    "for index in city_indices: \n",
+    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
     "    \n",
+    "names_and_ranks\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
