Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,27 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],\n",
-       " '.',\n",
-       " ['Buenos Aires',\n",
-       "  'Toronto',\n",
-       "  'Marakesh',\n",
-       "  'Albuquerque',\n",
-       "  'Los Cabos',\n",
-       "  'Greenville',\n",
-       "  'Archipelago Sea',\n",
-       "  'Pyeongchang',\n",
-       "  'Walla Walla Valley',\n",
-       "  'Salina Island',\n",
-       "  'Solta',\n",
-       "  'Iguazu Falls'],\n",
-       " '1. Buenos Aires',\n",
+       "['1. Buenos Aires',\n",
        " '2. Toronto',\n",
        " '3. Marakesh',\n",
        " '4. Albuquerque',\n",
@@ -1087,12 +1073,13 @@
        " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "names_and_ranks = []\n",
     "for index in city_indices: \n",
     "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
     "    \n",
