--- a/index.ipynb
+++ b/index.ipynb
@@ -1119,12 +1119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations = []\n",
-    "for index in cities:"
+    "for city in cities:\n",
+    "    city_populations.append(city['Population'])\n",
+    "city_populations"
    ]
   },
   {
