--- a/index.ipynb
+++ b/index.ipynb
@@ -2126,7 +2126,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in cities:\n",
+    "    city_populations.append(city['Population'])\n",
+    "city_populations"
    ]
   },
   {
